--- a/title.tex
+++ b/title.tex
@@ -38,6 +38,7 @@
                           & \textsc{Laure Petrucci}  & Professeur, Université Paris 13\\
   \textit{Examinateurs :} & \textsc{Jean-Michel	Couvreur}  & Professeur, Université d'Orléans\\
                           & \textsc{Emanuelle Encrenaz}  & Maître de conférences, Sorbonne Université\\
+                          & \textsc{Bart Bogoerts}  & Assistant Professor, Vrije Universiteit Brussel\\
                           & \textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
                           & \textsc{Fabrice Kordon}  & Professeur, Sorbonne Université\\
 \end{tabular}\\
